--- a/principal.html
+++ b/principal.html
@@ -94,16 +94,22 @@
 
                     </li>
                     <li>
-                        <a data-hash href="#explanation">Escuelas</a>
+                        <a data-hash href="#explanation">Calendario</a>
                     </li>
                     <li>
-                        <a data-hash href="#features">Particulares</a>
+                        <a data-hash href="#features">Fotos</a>
                     </li>
                     <li>
-                        <a data-hash href="#team">Meet the Team</a>
+                        <a data-hash href="#team">Videos</a>
                     </li>
                     <li>
-                        <a data-hash href="#contact">Contact Us</a>
+                        <a data-hash href="#contact">Noticias</a>
+                    </li>
+                    <li>
+                        <a data-hash href="#contact">Sponsors</a>
+                    </li>
+                    <li>
+                        <a data-hash href="#contact">Como Participar</a>
                     </li>
                 </ul>
             </nav>
@@ -119,7 +125,7 @@
     <div class="slider" id="revolutionSliderFullScreen">
         <ul>
             <li data-transition="fade" data-slotamount="10" data-masterspeed="300">
-                <img src="img/slides/slide-bg-full.jpg" data-fullwidthcentering="on" alt="">
+                <img src="img/slides/slide.png" data-fullwidthcentering="on" alt="">
 
                 <div class="tp-caption main-label sft stb"
                      data-x="90"
@@ -157,7 +163,7 @@
                      data-y="380"
                      data-speed="300"
                      data-start="2500"
-                     data-easing="easeOutExpo"><a data-hash href="#projects" class="btn btn-lg btn-primary main-button">Empezar</a>
+                     data-easing="easeOutExpo"><a data-hash href="#explanation" class="btn btn-lg btn-primary main-button">Empezar</a>
                 </div>
 
 
