Add text and img to participar

--- a/participar.html
+++ b/participar.html
@@ -114,8 +114,35 @@
 
     <div role="main" class="main">
 
+        <section class="page-top">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h2>Cómo Participar del Desafío ECO</h2>
+                    </div>
+                </div>
+            </div>
+        </section>
 
+        <div class="container">
 
+            <div class="row">
+                <div class="col-md-8">
+                    <h3>Categorías <strong>particulares y escuelas</strong></h3>
+                    <p>Usted puede construír un prototipo y competir en el campeonato. Para esto es necesatio adquirir el Kit de construcción, que se detalla en <a href="#">Particulares</a> junto con los reglamentos y demás información y comunicarse a info@sportlinknet.com.ar solicitando información sobre el precio y la disponibilidad de los kits.</p>
+                    <p>En caso de los establecimientos educativos es necesari mandar los datos del mismo y un mail para que la organización tome contacto directamente con autoridades de la escuela.</p>
+                </div>
+                <div class="col-md-4">
+                    <div class="featured-box featured-box-secundary">
+                        <div class="box-content">
+                            <img src="img/part.jpg">
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
 
     </div>
 
