change principal name

--- a/index-header-6.html
+++ b/index-header-6.html
@@ -92,7 +92,7 @@
 </div>
 <div class="container">
     <h1 class="logo">
-        <a href="index.html">
+        <a href="index-old.html">
             <img alt="Porto" src="img/logo.png">
         </a>
     </h1>
@@ -113,14 +113,14 @@
                         <li class="dropdown-submenu">
                             <a href="#">Sliders</a>
                             <ul class="dropdown-menu">
-                                <li><a href="index.html">Revolution Slider</a></li>
+                                <li><a href="index-old.html">Revolution Slider</a></li>
                                 <li><a href="index-slider-2.html">Nivo Slider</a></li>
                             </ul>
                         </li>
-                        <li><a href="index.html">Home - Version 1</a></li>
+                        <li><a href="index-old.html">Home - Version 1</a></li>
                         <li><a href="index-2.html">Home - Version 2</a></li>
                         <li><a href="index-3.html">Home - Version 3</a></li>
-                        <li><a href="principal.html">One Page Website</a></li>
+                        <li><a href="index.html">One Page Website</a></li>
                     </ul>
                 </li>
                 <li>
@@ -165,7 +165,7 @@
                                             <li>
                                                 <span class="mega-menu-sub-title">Headers</span>
                                                 <ul class="sub-menu">
-                                                    <li><a href="index.html">Header Version 1</a></li>
+                                                    <li><a href="index-old.html">Header Version 1</a></li>
                                                     <li><a href="index-header-2.html">Header Version 2</a></li>
                                                     <li><a href="index-header-3.html">Header Version 3</a></li>
                                                     <li><a href="index-header-4.html">Header Version 4</a></li>
@@ -183,7 +183,7 @@
                                             <li>
                                                 <span class="mega-menu-sub-title">Footers</span>
                                                 <ul class="sub-menu">
-                                                    <li><a href="index.html#footer">Footer Version 1</a></li>
+                                                    <li><a href="index-old.html#footer">Footer Version 1</a></li>
                                                     <li><a href="index-footer-2.html#footer">Footer Version 2</a></li>
                                                     <li><a href="index-footer-3.html#footer">Footer Version 3</a></li>
                                                     <li><a href="index-footer-4.html#footer">Footer Version 4</a></li>
@@ -443,7 +443,7 @@
                 <div class="get-started">
                     <a href="#" class="btn btn-lg btn-primary">Get Started Now!</a>
 
-                    <div class="learn-more">or <a href="index.html">learn more.</a></div>
+                    <div class="learn-more">or <a href="index-old.html">learn more.</a></div>
                 </div>
             </div>
         </div>
@@ -952,7 +952,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-1">
-                    <a href="index.html" class="logo">
+                    <a href="index-old.html" class="logo">
                         <img alt="Porto Website Template" class="img-responsive" src="img/logo-footer.png">
                     </a>
                 </div>
