--- a/sitemap.html
+++ b/sitemap.html
@@ -56,7 +56,7 @@
 			<header>
 				<div class="container">
 					<h1 class="logo">
-						<a href="index.html">
+						<a href="index-old.html">
 							<img alt="Porto" src="img/logo.png">
 						</a>
 					</h1>
@@ -107,14 +107,14 @@
 										<li class="dropdown-submenu">
 											<a href="#">Sliders</a>
 											<ul class="dropdown-menu">
-												<li><a href="index.html">Revolution Slider</a></li>
+												<li><a href="index-old.html">Revolution Slider</a></li>
 												<li><a href="index-slider-2.html">Nivo Slider</a></li>
 											</ul>
 										</li>
-										<li><a href="index.html">Home - Version 1</a></li>
+										<li><a href="index-old.html">Home - Version 1</a></li>
 										<li><a href="index-2.html">Home - Version 2</a></li>
 										<li><a href="index-3.html">Home - Version 3</a></li>
-										<li><a href="principal.html">One Page Website</a></li>
+										<li><a href="index.html">One Page Website</a></li>
 									</ul>
 								</li>
 								<li>
@@ -159,7 +159,7 @@
 															<li>
 																<span class="mega-menu-sub-title">Headers</span>
 																<ul class="sub-menu">
-																	<li><a href="index.html">Header Version 1</a></li>
+																	<li><a href="index-old.html">Header Version 1</a></li>
 																	<li><a href="index-header-2.html">Header Version 2</a></li>
 																	<li><a href="index-header-3.html">Header Version 3</a></li>
 																	<li><a href="index-header-4.html">Header Version 4</a></li>
@@ -176,7 +176,7 @@
 															<li>
 																<span class="mega-menu-sub-title">Footers</span>
 																<ul class="sub-menu">
-																	<li><a href="index.html#footer">Footer Version 1</a></li>
+																	<li><a href="index-old.html#footer">Footer Version 1</a></li>
 																	<li><a href="index-footer-2.html#footer">Footer Version 2</a></li>
 																	<li><a href="index-footer-3.html#footer">Footer Version 3</a></li>
 																	<li><a href="index-footer-4.html#footer">Footer Version 4</a></li>
@@ -271,7 +271,7 @@
 						<div class="row">
 							<div class="col-md-12">
 								<ul class="breadcrumb">
-									<li><a href="index.html">Home</a></li>
+									<li><a href="index-old.html">Home</a></li>
 									<li class="active">Pages</li>
 								</ul>
 							</div>
@@ -292,7 +292,7 @@
 
 							<ul class="sitemap list icons">
 								<li>
-									<i class="icon icon-caret-right"></i><a href="index.html">Home</a>
+									<i class="icon icon-caret-right"></i><a href="index-old.html">Home</a>
 								</li>
 								<li>
 									<i class="icon icon-caret-right"></i><a href="about-us.html">About Us</a>
@@ -425,7 +425,7 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-md-1">
-								<a href="index.html" class="logo">
+								<a href="index-old.html" class="logo">
 									<img alt="Porto Website Template" class="img-responsive" src="img/logo-footer.png">
 								</a>
 							</div>
