--- a/index-old.html
+++ b/index-old.html
@@ -651,7 +651,7 @@
 
 						<div class="row center">
 							<div class="col-md-12">
-								<h2 class="short">
+								<h2 class="short word-rotator-title">
 									We're not the only ones
 									<strong>
 										<span class="word-rotate">
@@ -818,76 +818,80 @@
 				</div>
 			</div>
 
-			<footer class="short" id="footer">
+			<footer id="footer">
 				<div class="container">
 					<div class="row">
-						<div class="col-md-3">
-							<a href="index-old.html" class="logo push-bottom">
-								<img alt="Porto Website Template" src="img/logo-footer-small.png">
-							</a>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu pulvinar magna. Phasellus semper scelerisque purus, et semper nisl lacinia sit amet. Praesent venenatis turpis vitae purus semper, eget sagittis velit venenatis. <a href="#" class="btn-flat btn-xs">View More <i class="icon icon-arrow-right"></i></a></p>
+						<div class="footer-ribon">
+							<span>Get in Touch</span>
 						</div>
 						<div class="col-md-3">
-							<h4>Recent Posts</h4>
-							<ul class="nav nav-list primary push-bottom">
-								<li><a title="Class aptent taciti sociosqu ad litora torquent" href="blog-post.html">Class aptent taciti sociosqu ad...</a></li>
-								<li><a title="Class aptent taciti sociosqu ad litora torquent" href="blog-post.html">Aptent class taciti sociosqu...</a></li>
-								<li><a title="Class aptent taciti sociosqu ad litora torquent" href="blog-post.html">Taciti aptent class sociosqu ad...</a></li>
-								<li><a title="Class aptent taciti sociosqu ad litora torquent" href="blog-post.html">Sociosqu class aptent taciti...</a></li>
-							</ul>
+							<div class="newsletter">
+								<h4>Newsletter</h4>
+								<p>Keep up on our always evolving product features and technology. Enter your e-mail and subscribe to our newsletter.</p>
+
+								<div class="alert alert-success hidden" id="newsletterSuccess">
+									<strong>Success!</strong> You've been added to our email list.
+								</div>
+
+								<div class="alert alert-danger hidden" id="newsletterError"></div>
+
+								<form id="newsletterForm" action="php/newsletter-subscribe.php" method="POST">
+									<div class="input-group">
+										<input class="form-control" placeholder="Email Address" name="email" id="email" type="text">
+										<span class="input-group-btn">
+											<button class="btn btn-default" type="submit">Go!</button>
+										</span>
+									</div>
+								</form>
+							</div>
 						</div>
 						<div class="col-md-3">
-							<h4>Recent Tweets</h4>
+							<h4>Latest Tweet</h4>
 							<div id="tweet" class="twitter" data-account-id="">
 								<p>Please wait...</p>
 							</div>
 						</div>
-						<div class="col-md-3">
-							<h4>Recent Work</h4>
-
-							<ul class="list-unstyled recent-work">
-								<li>
-									<a class="thumb-info" href="portfolio-single-project.html">
-										<img src="img/projects/project.jpg" alt="">
-									</a>
-								</li>
-								<li>
-									<a class="thumb-info" href="portfolio-single-project.html">
-										<img class="img-responsive" src="img/projects/project-1.jpg" alt="">
-									</a>
-								</li>
-								<li>
-									<a class="thumb-info" href="portfolio-single-project.html">
-										<img class="img-responsive" src="img/projects/project-2.jpg" alt="">
-									</a>
-								</li>
-								<li>
-									<a class="thumb-info" href="portfolio-single-project.html">
-										<img class="img-responsive" src="img/projects/project-3.jpg" alt="">
-									</a>
-								</li>
-								<li>
-									<a class="thumb-info" href="portfolio-single-project.html">
-										<img class="img-responsive" src="img/projects/project-4.jpg" alt="">
-									</a>
-								</li>
-								<li>
-									<a class="thumb-info" href="portfolio-single-project.html">
-										<img class="img-responsive" src="img/projects/project-5.jpg" alt="">
-									</a>
-								</li>
-							</ul>
-
-							<a href="#" class="btn-flat pull-right btn-xs view-more-recent-work">View More <i class="icon icon-arrow-right"></i></a>
-
+						<div class="col-md-4">
+							<div class="contact-details">
+								<h4>Contact Us</h4>
+								<ul class="contact">
+									<li><p><i class="icon icon-map-marker"></i> <strong>Address:</strong> 1234 Street Name, City Name, United States</p></li>
+									<li><p><i class="icon icon-phone"></i> <strong>Phone:</strong> (123) 456-7890</p></li>
+									<li><p><i class="icon icon-envelope"></i> <strong>Email:</strong> <a href="mailto:mail@example.com">mail@example.com</a></p></li>
+								</ul>
+							</div>
+						</div>
+						<div class="col-md-2">
+							<h4>Follow Us</h4>
+							<div class="social-icons">
+								<ul class="social-icons">
+									<li class="facebook"><a href="http://www.facebook.com/" target="_blank" data-placement="bottom" rel="tooltip" title="Facebook">Facebook</a></li>
+									<li class="twitter"><a href="http://www.twitter.com/" target="_blank" data-placement="bottom" rel="tooltip" title="Twitter">Twitter</a></li>
+									<li class="linkedin"><a href="http://www.linkedin.com/" target="_blank" data-placement="bottom" rel="tooltip" title="Linkedin">Linkedin</a></li>
+								</ul>
+							</div>
 						</div>
 					</div>
 				</div>
 				<div class="footer-copyright">
 					<div class="container">
 						<div class="row">
-							<div class="col-md-12">
+							<div class="col-md-1">
+								<a href="index-old.html" class="logo">
+									<img alt="Porto Website Template" class="img-responsive" src="img/logo-footer.png">
+								</a>
+							</div>
+							<div class="col-md-7">
 								<p>© Copyright 2014. All Rights Reserved.</p>
+							</div>
+							<div class="col-md-4">
+								<nav id="sub-menu">
+									<ul>
+										<li><a href="page-faq.html">FAQ's</a></li>
+										<li><a href="sitemap.html">Sitemap</a></li>
+										<li><a href="contact-us.html">Contact</a></li>
+									</ul>
+								</nav>
 							</div>
 						</div>
 					</div>
@@ -905,7 +909,7 @@
 		<script src="vendor/bootstrap.js"></script>
 		<script src="vendor/twitterjs/twitter.js"></script>
 		<script src="vendor/rs-plugin/js/jquery.themepunch.plugins.min.js"></script>
-		<script src="vendor/rs-plugin/js/jquery.themepunch.revolution.min.js"></script>
+		<script src="vendor/rs-plugin/js/jquery.themepunch.revolution.js"></script>
 		<script src="vendor/owl-carousel/owl.carousel.js"></script>
 		<script src="vendor/circle-flip-slideshow/js/jquery.flipshow.js"></script>
 		<script src="vendor/magnific-popup/magnific-popup.js"></script>
