--- a/videos.html
+++ b/videos.html
@@ -61,7 +61,7 @@
 <header class="single-menu flat-menu">
     <div class="container">
         <h1 class="logo">
-            <a href="index.html">
+            <a href="index-old.html">
                 <img alt="Porto" src="img/logo.png">
             </a>
         </h1>
@@ -84,7 +84,7 @@
             <nav class="nav-main">
                 <ul class="nav nav-pills nav-main" id="mainMenu">
                     <li>
-                        <a class="dropdown-toggle" href="principal.html">
+                        <a class="dropdown-toggle" href="index.html">
                             Principal
                             <i class="icon icon-angle-down"></i>
                         </a>
@@ -241,7 +241,7 @@
         <div class="container">
             <div class="row">
                 <!--<div class="col-md-1">-->
-                <!--<a href="index.html" class="logo">-->
+                <!--<a href="index-old.html" class="logo">-->
                 <!--<img alt="Porto Website Template" class="img-responsive" src="img/logo-footer.png">-->
                 <!--</a>-->
                 <!--</div>-->
