tabs, hrefs and view news

--- a/galeria.html
+++ b/galeria.html
@@ -91,18 +91,18 @@
 
                         </li>
                         <!--<li>-->
-                        <!--<a href="calendario.html">Calendario</a>-->
+                            <!--<a href="calendario.html">Calendario</a>-->
                         <!--</li>-->
-
-                        <li>
+                        <li class="active">
                             <a href="galeria.html">Galería</a>
                         </li>
+
                         <li>
                             <a href="news.html">Noticias</a>
                         </li>
 
-                        <li class="active">
-                            <a href="participar.html">Cómo Participar</a>
+                        <li>
+                            <a href="participar.html">Como Participar</a>
                         </li>
                     </ul>
                 </nav>
@@ -116,7 +116,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h2>Cómo Participar del Desafío ECO</h2>
+                        <h2>Videos</h2>
                     </div>
                 </div>
             </div>
@@ -124,32 +124,76 @@
 
         <div class="container">
 
+            <!--<ul class="nav nav-pills sort-source" data-sort-id="portfolio" data-option-key="filter">-->
+            <!--<li data-option-value="*" class="active"><a href="#">Show All</a></li>-->
+            <!--<li data-option-value=".websites"><a href="#">Websites</a></li>-->
+            <!--<li data-option-value=".logos"><a href="#">Logos</a></li>-->
+            <!--<li data-option-value=".brands"><a href="#">Brands</a></li>-->
+            <!--</ul>-->
+
+            <!--<hr/>-->
+
             <div class="row">
-                <div class="col-md-8">
-                    <h3>Categorías <strong>particulares y escuelas</strong></h3>
 
-                    <p>Usted puede construír un prototipo y competir en el campeonato. Para esto es necesatio adquirir
-                        el Kit de construcción, que se detalla en <a href="#">Particulares</a> junto con los reglamentos
-                        y demás información y comunicarse a info@sportlinknet.com.ar solicitando información sobre el
-                        precio y la disponibilidad de los kits.</p>
-
-                    <p>En caso de los establecimientos educativos es necesari mandar los datos del mismo y un mail para
-                        que la organización tome contacto directamente con autoridades de la escuela.</p>
-                    <br>
-                    <!--<ul class="list icons list-unstyled">
-                        <li> <i class="icon icon-check"></i> Últimas vacantes de inscripción 2013 disponibles 13/06/2013</li>
-                    </ul> -->
-                    <p class="tall" id="vacantes"> Últimas vacantes de inscripción 2013 disponibles 13/06/2013 </p>
-
-                </div>
-                <div class="col-md-4">
-                    <div class="featured-box featured-box-secundary">
-                        <div class="box-content">
-                            <img src="img/part.jpg">
-
+                <ul class="portfolio-list sort-destination" data-sort-id="portfolio">
+                    <li class="col-md-6 isotope-item websites">
+                        <div class="portfolio-item img-thumbnail">
+                            <a href="portfolio-single-project.html" class="thumb-info">
+                                <iframe class="youtube-player" type="text/html" width="640" height="385"
+                                        src="http://www.youtube.com/embed/nMeeBc8yfxM" frameborder="0"></iframe>
+										<span class="thumb-info-title">
+											<span class="thumb-info-inner">DesafoEco 2013</span>
+										</span>
+                            </a>
                         </div>
-                    </div>
-                </div>
+                    </li>
+                    <li class="col-md-6 isotope-item brands">
+                        <div class="portfolio-item img-thumbnail">
+                            <a href="portfolio-single-project.html" class="thumb-info">
+                                <iframe class="youtube-player" type="text/html" width="640" height="385"
+                                        src="http://www.youtube.com/embed/Vlmu4GAxe2U" frameborder="0"></iframe>
+										<span class="thumb-info-title">
+											<span class="thumb-info-inner">Carrera 2012</span>
+										</span>
+                            </a>
+                        </div>
+                    </li>
+                    <li class="col-md-6 isotope-item logos">
+                        <div class="portfolio-item img-thumbnail">
+                            <a href="portfolio-single-project.html" class="thumb-info">
+                                <iframe class="youtube-player" type="text/html" width="640" height="385"
+                                        src="http://www.youtube.com/embed/Sjqb87gZl-Q" frameborder="0"></iframe>
+										<span class="thumb-info-title">
+											<span class="thumb-info-inner">Previa 2012</span>
+										</span>
+                            </a>
+                        </div>
+                    </li>
+                    <li class="col-md-6 isotope-item websites">
+                        <div class="portfolio-item img-thumbnail">
+                            <a href="portfolio-single-project.html" class="thumb-info">
+                                <iframe class="youtube-player" type="text/html" width="640" height="385"
+                                        src="http://www.youtube.com/embed/go-nGlIbuSY" frameborder="0"></iframe>
+										<span class="thumb-info-title">
+											<span class="thumb-info-inner">Cuidado los patos!</span>
+										</span>
+                            </a>
+                        </div>
+                    </li>
+                    <li class="col-md-6 isotope-item websites">
+                        <div class="portfolio-item img-thumbnail">
+                            <a href="portfolio-single-project.html" class="thumb-info">
+                                <iframe class="youtube-player" type="text/html" width="640" height="385"
+                                        src="http://www.youtube.com/embed/_5XPoBhSDKM" frameborder="0"></iframe>
+										<span class="thumb-info-title">
+											<span class="thumb-info-inner">Test Prototipo</span>
+										</span>
+                            </a>
+                        </div>
+                    </li>
+
+                </ul>
+
             </div>
 
         </div>
@@ -162,18 +206,30 @@
                 <div class="col-md-8">
                     <h4>Desafioeco</h4>
 
-                    <p>Prototipos de emisión cero, equipados con baterías de gel, participarán de una competencia única
-                        que
+                    <p>Prototipos de emisión cero, equipados con baterías de gel, participarán de una competencia única que
                         premiará la máxima eficiencia en el diseño </p>
                     <hr class="light">
                 </div>
                 <div class="col-md-3 col-md-offset-1">
+                    <!--<h5 class="short">Contacto</h5>-->
+                    <!--<span class="phone">(800) 123-4567</span>-->
+
+                    <!--<p class="short">International: (333) 456-6670</p>-->
+
+                    <!--<p class="short">Fax: (222) 531-8999</p>-->
+                    <!--<ul class="list icons list-unstyled">-->
+                    <!--<li><i class="icon icon-envelope"></i> <a href="mailto:okler@okler.net">okler@okler.net</a></li>-->
+                    <!--</ul>-->
                     <div class="social-icons">
                         <ul class="social-icons">
                             SEGUINOS EN:
                             <li class="facebook"><a href="https://www.facebook.com/DesafioEco" target="_blank"
                                                     data-placement="bottom"
                                                     rel="tooltip" title="Facebook">Facebook</a></li>
+                            <!--<li class="twitter"><a href="http://www.twitter.com/" target="_blank" data-placement="bottom"-->
+                            <!--rel="tooltip" title="Twitter">Twitter</a></li>-->
+                            <!--<li class="linkedin"><a href="http://www.linkedin.com/" target="_blank" data-placement="bottom"-->
+                            <!--rel="tooltip" title="Linkedin">Linkedin</a></li>-->
                         </ul>
                     </div>
                 </div>
@@ -182,6 +238,11 @@
         <div class="footer-copyright">
             <div class="container">
                 <div class="row">
+                    <!--<div class="col-md-1">-->
+                    <!--<a href="index-old.html" class="logo">-->
+                    <!--<img alt="Porto Website Template" class="img-responsive" src="img/logo-footer.png">-->
+                    <!--</a>-->
+                    <!--</div>-->
                     <div class="col-md-11">
                         <p>© Desafioeco 2014. All Rights Reserved.</p>
                     </div>
@@ -212,6 +273,21 @@
 <!-- Custom JS -->
 <script src="js/custom.js"></script>
 
+<!-- Google Analytics: Change UA-XXXXX-X to be your site's ID. Go to http://www.google.com/analytics/ for more information.
+<script type="text/javascript">
+
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-12345678-1']);
+    _gaq.push(['_trackPageview']);
+
+    (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
+
+</script>
+ -->
 
 </body>
 </html>
