--- a/index.html
+++ b/index.html
@@ -93,14 +93,9 @@
                         </a>
 
                     </li>
+
                     <li>
-                        <a href="calendario.html">Calendario</a>
-                    </li>
-                    <li>
-                        <a href="fotos.html">Fotos</a>
-                    </li>
-                    <li>
-                        <a href="videos.html">Videos</a>
+                        <a href="galeria.html">Galería</a>
                     </li>
                     <li>
                         <a href="news.html">Noticias</a>
