--- a/galeria.html
+++ b/galeria.html
@@ -136,6 +136,7 @@
             <div class="row">
 
                 <ul class="portfolio-list sort-destination" data-sort-id="portfolio">
+
                     <li class="col-md-6 isotope-item websites">
                         <div class="portfolio-item img-thumbnail">
                             <a href="portfolio-single-project.html" class="thumb-info">
@@ -191,13 +192,97 @@
                             </a>
                         </div>
                     </li>
-
+                    <li class="col-md-6 isotope-item websites">
+                        <div class="portfolio-item img-thumbnail">
+                            <a class="img-thumbnail lightbox pull-left thumb-info" data-toggle="modal" data-target="#modal-1">
+                                <img class="img-custom" width="640" height="385" src="img/galery/ECO-2013-BSAS.jpg">
+                                <span class="thumb-info-title" style="bottom: 2%; left: 0%;">
+								    <span class="thumb-info-inner">ECO 2013 Buenos Aires - Primera Carrera</span>
+							    </span>
+                                <span class="zoom">
+									<i class="icon icon-16 icon-white-shadowed icon-search"></i>
+								</span>
+                            </a>
+                        </div>
+                    </li>
+                    <li class="col-md-6 isotope-item websites">
+                        <div class="portfolio-item img-thumbnail">
+                            <a class="img-thumbnail lightbox pull-left thumb-info" data-toggle="modal" data-target="#modal-2">
+                                <img class="img-custom" width="640" height="385" src="img/galery/ECO-2013-SI.jpg">
+                                <span class="thumb-info-title" style="bottom: 2%; left: 0%;">
+								    <span class="thumb-info-inner">ECO 2013 San Isidro - Segunda Carrera</span>
+							    </span>
+                                <span class="zoom">
+									<i class="icon icon-16 icon-white-shadowed icon-search"></i>
+								</span>
+                            </a>
+                        </div>
+                    </li>
                 </ul>
 
             </div>
 
         </div>
 
+    </div>
+
+    <!--MODALS DE FOTOS-->
+    <div class="modal fade" id="modal-1" tabindex="-1" role="dialog" aria-labelledby="modalLabel-1" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title" id="modalLabel-1">ECO 2013 Buenos Aires - Primera Carrera</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="owl-carousel" data-plugin-options='{"items": 5, "autoHeight": true}'>
+                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/ECO-2013-BSAS.jpg"> </div>
+                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/ECO-2013-BSAS-1.jpg"> </div>
+                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/ECO-2013-BSAS-2.jpg"> </div>
+                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/ECO-2013-BSAS-3.jpg"> </div>
+                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/ECO-2013-BSAS-4.jpg"> </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="modal-2" tabindex="-1" role="dialog" aria-labelledby="modalLabel-2" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title" id="modalLabel-2">ECO 2013 San Isidro - Segunda Carrera</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="owl-carousel" data-plugin-options='{"items": 5, "autoHeight": true}'>
+                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/ECO-2013-SI.jpg"> </div>
+                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/ECO-2013-SI-1.jpg"> </div>
+                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/ECO-2013-SI-2.jpg"> </div>
+                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/ECO-2013-SI-3.jpg"> </div>
+                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/ECO-2013-SI-4.jpg"> </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="modal-3" tabindex="-1" role="dialog" aria-labelledby="modalLabel-3" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title" id="modalLabel-3">ECO 2013 Buenos Aires - Primera Carrera</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="owl-carousel" data-plugin-options='{"items": 5, "autoHeight": true}'>
+                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/ECO-2013-BSAS.jpg"> </div>
+                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/ECO-2013-BSAS-1.jpg"> </div>
+                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/ECO-2013-BSAS-2.jpg"> </div>
+                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/ECO-2013-BSAS-3.jpg"> </div>
+                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/ECO-2013-BSAS-4.jpg"> </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <footer class="short" id="footer">
