--- a/participar.html
+++ b/participar.html
@@ -215,7 +215,7 @@
     <div class="container">
         <h2 style="width: 70%; float: left; margin-bottom: 0;">Plazas y fechas en proceso de confirmación</h2>
 
-        <a data-hash href="#explanation"
+        <a href="doc/reglamento.pdf" target="_blank"
            class="btn btn-lg btn-primary main-button"
            style="background-color: #0099e6;">Descargá el reglamento 2014</a>
 
