--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 <div role="main" class="main" id="home">
 <div id="content" class="content full">
 
-<div class="slider-container slider-container-fullscreen hidden-xs">
+<div class="slider-container slider-container-fullscreen hidden-xs" height="600px">
     <div class="slider" id="revolutionSliderFullScreen">
         <ul>
             <li data-transition="fade" data-slotamount="10" data-masterspeed="300">
