--- a/galeria.html
+++ b/galeria.html
@@ -217,6 +217,19 @@
                             </a>
                         </div>
                     </li>
+                    <li class="col-md-6 isotope-item websites">
+                        <div class="portfolio-item img-thumbnail">
+                            <a class="img-thumbnail lightbox pull-left thumb-info" data-toggle="modal" data-target="#modal-3">
+                                <img class="img-custom" width="640" height="385" src="img/galery/ECO-2013-SL.jpg">
+                                <span class="thumb-info-title" style="bottom: 2%; left: 0%;">
+								    <span class="thumb-info-inner">ECO 2013 San Luis - Tercera Carrera</span>
+							    </span>
+                                <span class="zoom">
+									<i class="icon icon-16 icon-white-shadowed icon-search"></i>
+								</span>
+                            </a>
+                        </div>
+                    </li>
                 </ul>
 
             </div>
@@ -269,15 +282,15 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                    <h4 class="modal-title" id="modalLabel-3">ECO 2013 Buenos Aires - Primera Carrera</h4>
+                    <h4 class="modal-title" id="modalLabel-3">ECO 2013 San Luis - Tercera Carrera</h4>
                 </div>
                 <div class="modal-body">
                     <div class="owl-carousel" data-plugin-options='{"items": 5, "autoHeight": true}'>
-                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/ECO-2013-BSAS.jpg"> </div>
-                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/ECO-2013-BSAS-1.jpg"> </div>
-                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/ECO-2013-BSAS-2.jpg"> </div>
-                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/ECO-2013-BSAS-3.jpg"> </div>
-                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/ECO-2013-BSAS-4.jpg"> </div>
+                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/ECO-2013-SL.jpg"> </div>
+                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/ECO-2013-SL-1.jpg"> </div>
+                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/ECO-2013-SL-2.jpg"> </div>
+                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/ECO-2013-SL-3.jpg"> </div>
+                        <div> <img alt="" class="img-responsive img-rounded" src="img/galery/ECO-2013-SL-4.jpg"> </div>
                     </div>
                 </div>
             </div>
