--- a/index.html
+++ b/index.html
@@ -180,17 +180,15 @@
 
             <h2 class="more-spaced">Un campeonato de tres circuitos callejeros</h2>
 
-            <p class="lead">En el corazón de la Ciudad de Buenos Aires , en las calles del tradicional San Isidro y un
-                gran final en los hermosos paisajes de San Luis serán los escenarios donde los prototipos competirán
-                para determinar quién es el nuevo Campeón Argentino.</p>
+            <!--<p class="lead">En el corazón de la Ciudad de Buenos Aires , en las calles del tradicional San Isidro y un-->
+                <!--gran final en los hermosos paisajes de San Luis serán los escenarios donde los prototipos competirán-->
+                <!--para determinar quién es el nuevo Campeón Argentino.</p>-->
 
-            <h2 class="more-spaced">Una nueva era en vehículos en dos categorías</h2>
+            <h2 class="more-spaced">Una nueva era en vehículos</h2>
 
             <p class="lead">En el marco de un programa educativo con el objeto de inculcar en los estudiantes el cuidado
                 del medio ambiente y la investigación de sistemas de trasporte no contaminantes escuelas Técnicas de
-                todo el país nos permitirán ver sus creaciones basadas en las tecnologías del mañana y también la nueva
-                categoría para particulares que comienza este año presentará sus prototipos en busca de la máxima
-                eficiencia </p>
+                todo el país nos permitirán ver sus creaciones basadas en las tecnologías del mañana. </p>
 
             <!--<a><p class="lead"><span class="alternative-font">MAS</span></p></a>-->
 
@@ -205,8 +203,8 @@
     <h2 style="width: 70%; float: left; margin-bottom: 0;">Plazas y fechas en proceso de confirmación</h2>
 
     <a  href="doc/reglamento.pdf"  target="_blank"
-       class="btn btn-lg btn-primary main-button"
-       style="background-color: #0099e6;">Descargá el reglamento 2014</a>
+       class="btn btn-primary"
+       style="background-color: #0099e6; padding: 10px 10px 10px 10px;">Descargá el reglamento deportivo 2014</a>
 
 <!--<div class="row" id="projects">-->
 <!--<div class="col-xs-offset-4 col-md-6 col-xs-offset-4">-->
@@ -601,9 +599,9 @@
         <div>
             <img class="img-responsive" src="img/logos/bsasciudad.jpg" alt="">
         </div>
-        <div>
-            <img class="img-responsive" src="img/logos/Celestial.JPG" alt="">
-        </div>
+        <!--<div>-->
+            <!--<img class="img-responsive" src="img/logos/Celestial.JPG" alt="">-->
+        <!--</div>-->
         <div>
             <img class="img-responsive" src="img/logos/ciudad.jpg" alt="">
         </div>
@@ -617,7 +615,7 @@
             <img class="img-responsive" src="img/logos/fiat.jpg" alt="">
         </div>
         <div>
-            <img class="img-responsive" src="img/logos/fric-rot-logo.jpg" alt="">
+            <img class="img-responsive" src="img/logos/itba.png" alt="">
         </div>
         <div>
             <img class="img-responsive" src="img/logos/halcon.jpg" alt="">
@@ -628,11 +626,11 @@
         <div>
             <img class="img-responsive" src="img/logos/logo-aca.gif" alt="">
         </div>
+        <!--<div>-->
+            <!--<img class="img-responsive" src="img/logos/logo-fia.gif" alt="">-->
+        <!--</div>-->
         <div>
-            <img class="img-responsive" src="img/logos/logo-fia.gif" alt="">
-        </div>
-        <div>
-            <img class="img-responsive" src="img/logos/logo_A_SanLuis_grande_azul.png" alt="">
+            <img class="img-responsive" src="img/logos/fia.jpg" alt="">
         </div>
         <div>
             <img class="img-responsive" src="img/logos/mercedes.jpg" alt="">
@@ -641,7 +639,7 @@
             <img class="img-responsive" src="img/logos/power.jpg" alt="">
         </div>
         <div>
-            <img class="img-responsive" src="img/logos/Rivadavia.jpg" alt="">
+            <img class="img-responsive" src="img/logos/gallardo.jpg" alt="">
         </div>
         <div>
             <img class="img-responsive" src="img/logos/soriano.jpg" alt="">
@@ -650,7 +648,10 @@
             <img class="img-responsive" src="img/logos/sportlink.jpg" alt="">
         </div>
         <div>
-            <img class="img-responsive" src="img/logos/volvo.jpg" alt="">
+            <img class="img-responsive" src="img/logos/imperial.jpg" alt="">
+        </div>
+        <div>
+            <img class="img-responsive" src="img/logos/tiempos.jpg" alt="">
         </div>
     </div>
 </div>
