--- a/participar.html
+++ b/participar.html
@@ -215,14 +215,14 @@
         <h2 style="width: 70%; float: left; margin-bottom: 0;">Plazas y fechas en proceso de confirmación</h2>
 
         <a href="doc/reglamento.pdf" target="_blank"
-           class="btn btn-lg btn-primary main-button"
-           style="background-color: #0099e6;">Descargá el reglamento 2014</a>
+           class="btn btn-primary"
+           style="background-color: #0099e6; padding: 10px 10px 10px 10px;">Descargá el reglamento deportivo 2014</a>
 
     </div>
 </section>
 
 
-<footer class="short" id="footer">
+<footer class="short" id="footer" style="margin-top: -50px">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-8">
