--- a/participar.html
+++ b/participar.html
@@ -125,15 +125,16 @@
 
         <div class="row" style="border-bottom: 2px solid #DDD; margin-bottom: 40px;">
             <div class="col-md-7">
-                <h3>Categorías <strong>particulares y escuelas</strong></h3>
+                <h3>Categorías <strong> <!--particulares--> y escuelas</strong></h3>
 
+                <!--
                 <p>Usted puede construír un prototipo y competir en el campeonato. Para esto es necesatio adquirir
                     el Kit de construcción, que se detalla en <a href="#">Particulares</a> junto con los reglamentos
                     y demás información y comunicarse a info@sportlinknet.com.ar solicitando información sobre el
                     precio y la disponibilidad de los kits.</p>
-
-                <p>En caso de los establecimientos educativos es necesari mandar los datos del mismo y un mail para
-                    que la organización tome contacto directamente con autoridades de la escuela.</p>
+                -->
+                <p>Los establecimientos educativos deben mandar los datos del mismo y un mail para que la organización
+                    tome contacto directamente con autoridades de la escuela.</p>
                 <br>
                 <!--<ul class="list icons list-unstyled">
                     <li> <i class="icon icon-check"></i> Últimas vacantes de inscripción 2013 disponibles 13/06/2013</li>
