--- a/participar.html
+++ b/participar.html
@@ -125,7 +125,7 @@
 
         <div class="row" style="border-bottom: 2px solid #DDD; margin-bottom: 40px;">
             <div class="col-md-7">
-                <h3>Categorías <strong> <!--particulares--> y escuelas</strong></h3>
+                <h3>Categoría<strong> <!--s particulares y--> escuelas</strong></h3>
 
                 <!--
                 <p>Usted puede construír un prototipo y competir en el campeonato. Para esto es necesatio adquirir
@@ -149,7 +149,117 @@
                     </div>
                 </div>
             </div>
+
+
+            <div class="owl-carousel" data-plugin-options='{"items": 12, "singleItem": false, "autoPlay": true}'>
+                <div>
+                    <img class="img-responsive" src="img/escuelas-logos/esc.jpg" alt="" style=" padding-right: 8px; ">
+                </div>
+                <div>
+                    <img class="img-responsive" src="img/escuelas-logos/esc1.jpg" alt="" style=" padding-right: 8px; ">
+                </div>
+                <div>
+                    <img class="img-responsive" src="img/escuelas-logos/esc2.jpg" alt="" style=" padding-right: 8px; ">
+                </div>
+                <div>
+                    <img class="img-responsive" src="img/escuelas-logos/esc3.png" alt="" style=" padding-right: 8px; ">
+                </div>
+                <div>
+                    <img class="img-responsive" src="img/escuelas-logos/esc4.png" alt="" style=" padding-right: 8px; ">
+                </div>
+                <div>
+                    <img class="img-responsive" src="img/escuelas-logos/esc5.png" alt="" style=" padding-right: 8px; ">
+                </div>
+                <div>
+                    <img class="img-responsive" src="img/escuelas-logos/esc6.png" alt="" style=" padding-right: 8px; ">
+                </div>
+                <div>
+                    <img class="img-responsive" src="img/escuelas-logos/esc7.png" alt="" style=" padding-right: 8px; ">
+                </div>
+                <div>
+                    <img class="img-responsive" src="img/escuelas-logos/esc8.jpg" alt="" style=" padding-right: 8px; ">
+                </div>
+                <div>
+                    <img class="img-responsive" src="img/escuelas-logos/esc9.jpg" alt="" style=" padding-right: 8px; ">
+                </div>
+                <div>
+                    <img class="img-responsive" src="img/escuelas-logos/esc10.png" alt="" style=" padding-right: 8px; ">
+                </div>
+                <div>
+                    <img class="img-responsive" src="img/escuelas-logos/esc11.png" alt="" style=" padding-right: 8px; ">
+                </div>
+                <div>
+                    <img class="img-responsive" src="img/escuelas-logos/esc12.jpg" alt="" style=" padding-right: 8px; ">
+                </div>
+                <div>
+                    <img class="img-responsive" src="img/escuelas-logos/esc13.png" alt="" style=" padding-right: 8px; ">
+                </div>
+                <div>
+                    <img class="img-responsive" src="img/escuelas-logos/esc14.jpg" alt="" style=" padding-right: 8px; ">
+                </div>
+                <div>
+                    <img class="img-responsive" src="img/escuelas-logos/esc15.png" alt="" style=" padding-right: 8px; ">
+                </div>
+                <div>
+                    <img class="img-responsive" src="img/escuelas-logos/esc16.png" alt="" style=" padding-right: 8px; ">
+                </div>
+                <div>
+                    <img class="img-responsive" src="img/escuelas-logos/esc17.jpg" alt="" style=" padding-right: 8px; ">
+                </div>
+                <div>
+                    <img class="img-responsive" src="img/escuelas-logos/esc18.jpg" alt="" style=" padding-right: 8px; ">
+                </div>
+                <div>
+                    <img class="img-responsive" src="img/escuelas-logos/esc19.png" alt="" style=" padding-right: 8px; ">
+                </div>
+                <div>
+                    <img class="img-responsive" src="img/escuelas-logos/esc20.jpg" alt="" style=" padding-right: 8px; ">
+                </div>
+                <div>
+                    <img class="img-responsive" src="img/escuelas-logos/esc21.png" alt="" style=" padding-right: 8px; ">
+                </div>
+                <div>
+                    <img class="img-responsive" src="img/escuelas-logos/esc22.png" alt="" style=" padding-right: 8px; ">
+                </div>
+                <div>
+                    <img class="img-responsive" src="img/escuelas-logos/esc23.png" alt="" style=" padding-right: 8px; ">
+                </div>
+                <div>
+                    <img class="img-responsive" src="img/escuelas-logos/esc24.png" alt="" style=" padding-right: 8px; ">
+                </div>
+                <div>
+                    <img class="img-responsive" src="img/escuelas-logos/esc25.jpg" alt="" style=" padding-right: 8px; ">
+                </div>
+                <div>
+                    <img class="img-responsive" src="img/escuelas-logos/esc26.jpg" alt="" style=" padding-right: 8px; ">
+                </div>
+                <div>
+                    <img class="img-responsive" src="img/escuelas-logos/esc27.jpg" alt="" style=" padding-right: 8px; ">
+                </div>
+                <div>
+                    <img class="img-responsive" src="img/escuelas-logos/esc28.jpg" alt="" style=" padding-right: 8px; ">
+                </div>
+                <div>
+                    <img class="img-responsive" src="img/escuelas-logos/esc29.jpg" alt="" style=" padding-right: 8px; ">
+                </div>
+                <div>
+                    <img class="img-responsive" src="img/escuelas-logos/esc30.jpg" alt="" style=" padding-right: 8px; ">
+                </div>
+                <div>
+
+            </div>
+
+            </div>
         </div>
+
+
+
+
+
+
+
+
+
 
         <article class="post post-medium">
             <div class="row">
