--- a/participar.html
+++ b/participar.html
@@ -136,6 +136,11 @@
                 <p>Los establecimientos educativos deben mandar los datos del mismo y un mail para que la organización
                     tome contacto directamente con autoridades de la escuela.</p>
                 <br>
+                <br>
+                <p>Estas son las <b>escuelas participantes:</b> </p>
+
+                <br>
+                <br>
                 <!--<ul class="list icons list-unstyled">
                     <li> <i class="icon icon-check"></i> Últimas vacantes de inscripción 2013 disponibles 13/06/2013</li>
                 </ul> -->
