Fix spelling mistakes

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     </li>
 
                     <li>
-                        <a href="participar.html">Como Participar</a>
+                        <a href="participar.html">Cómo Participar</a>
                     </li>
                 </ul>
             </nav>
@@ -187,7 +187,7 @@
             <h2 class="more-spaced">Una nueva era en vehículos</h2>
 
             <p class="lead">En el marco de un programa educativo con el objeto de inculcar en los estudiantes el cuidado
-                del medio ambiente y la investigación de sistemas de trasporte no contaminantes escuelas Técnicas de
+                del medio ambiente y la investigación de sistemas de trasporte no contaminantes, escuelas Técnicas de
                 todo el país nos permitirán ver sus creaciones basadas en las tecnologías del mañana. </p>
 
             <!--<a><p class="lead"><span class="alternative-font">MAS</span></p></a>-->
