--- a/videos.html
+++ b/videos.html
@@ -104,7 +104,7 @@
                     </li>
 
                     <li>
-                        <a href="participar.html">Como Participar</a>
+                        <a href="participar.html">Cómo Participar</a>
                     </li>
                 </ul>
             </nav>
