--- a/news.html
+++ b/news.html
@@ -100,7 +100,7 @@
                     </li>
 
                     <li>
-                        <a href="participar.html">Como Participar</a>
+                        <a href="participar.html">Cómo Participar</a>
                     </li>
                 </ul>
             </nav>
