--- a/galeria.html
+++ b/galeria.html
@@ -115,7 +115,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h2>Videos</h2>
+                        <h2>Galería</h2>
                     </div>
                 </div>
             </div>
